--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "faker": "^5.5.3",
-    "mongoose": "^5.12.7",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.7"
   },
   "devDependencies": {
-    "eslint": "^7.25.0"
+    "dotenv": "^8.2.0",
+    "eslint": "^7.25.0",
+    "nodemon": "^2.0.7"
   }
 }
