--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "faker": "^5.5.3",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
